[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Playground for Python and Poetry"
authors = ["Jakub Slys <jakub@slys.dev>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
