[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Playground for Python and Poetry"
authors = ["Jakub Slys <jakub@slys.dev>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
