[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Playground for Python and Poetry"
authors = ["Jakub Slys <jakub@slys.dev>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.24"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
main = "sandbox.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
